chore: add ktlint rules

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-root = true
-
-[*.kt]
+[*.{kt,kts}]
 ktlint_function_naming_ignore_when_annotated_with = Composable
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_string-template-indent = disabled
