--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,4 @@
-root = true
-
-[*]
-end_of_line = lf
-insert_final_newline = true
-
-[*.kt]
+[*.{kt,kts}]
 ktlint_function_naming_ignore_when_annotated_with = Composable
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_string-template-indent = disabled
