--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,4 @@
 ktlint_function_naming_ignore_when_annotated_with = Composable
 ktlint_standard_multiline-expression-wrapping = disabled
 ktlint_standard_string-template-indent = disabled
+ktlint_standard_function-signature = disabled
